--- a/app.json
+++ b/app.json
@@ -5,10 +5,6 @@
   "logo": "http://node-js-sample.herokuapp.com/node.svg",
   "keywords": ["node", "express", "static","redis","heroku"],
   "addons": [
-    "heroku-redis",
-    {
-      "plan": "hobby-dev",
-      "as": "REDIS"
-    }
+    "heroku-redis"
   ]
 }
