--- a/app.json
+++ b/app.json
@@ -5,6 +5,7 @@
   "logo": "http://node-js-sample.herokuapp.com/node.svg",
   "keywords": ["node", "express", "static","redis","heroku"],
   "addons": [
+    "heroku-redis",
     {
       "plan": "heroku-redis:hobby-dev",
       "as": "REDIS"
