--- a/app.json
+++ b/app.json
@@ -5,10 +5,7 @@
   "logo": "http://node-js-sample.herokuapp.com/node.svg",
   "keywords": ["node", "express", "static","redis","heroku"],
   "addons": [
-    "heroku-redis",
-    {
-      "plan": "heroku-redis:hobby-dev",
-      "as": "REDIS"
-    }
-  ]
+        "rediscloud:30",
+        "heroku-redis"
+    ]
 }
